--- a/public/listing.html
+++ b/public/listing.html
@@ -1,70 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List a Pet | PawfectMatch</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>List a Pet | PawfectMatch</title>
+  <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: { primary: '#6366f1', secondary: '#f97316' },
+          borderRadius: {
+            'none': '0px', 'sm': '4px', DEFAULT: '8px',
+            'md': '12px', 'lg': '16px', 'xl': '20px',
+            '2xl': '24px', '3xl': '32px', 'full': '9999px',
+            'button': '8px'
+          }
+        }
+      }
+    }
+  </script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="bg-gray-50">
-    <nav class="bg-white shadow-sm fixed w-full z-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-16">
-                <div class="flex items-center">
-                    <a href="index.html" class="flex items-center">
-                        <div class="w-10 h-10 flex items-center justify-center text-primary text-2xl">
-                            <i class="ri-footprint-line"></i>
-                        </div>
-                        <span class="ml-2 text-2xl text-gray-800 logo">PawfectMatch</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <div class="max-w-lg mx-auto mt-24 bg-white p-8 rounded-lg shadow-lg">
-        <h2 class="text-2xl font-bold mb-6 text-center">List a Pet for Adoption</h2>
-        <form id="petListingForm">
-            <div class="mb-4">
-                <label class="block text-gray-700 mb-2">Pet Name</label>
-                <input type="text" id="petName" class="input-field" required>
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 mb-2">Type</label>
-                <select id="petType" class="input-field" required>
-                    <option value="dog">Dog</option>
-                    <option value="cat">Cat</option>
-                    <option value="bird">Bird</option>
-                    <option value="small">Small & Furry</option>
-                </select>
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 mb-2">Age</label>
-                <input type="text" id="petAge" class="input-field" required>
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 mb-2">Gender</label>
-                <select id="petGender" class="input-field" required>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                </select>
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 mb-2">Description</label>
-                <textarea id="petDescription" class="input-field" rows="3"></textarea>
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 mb-2">Location</label>
-                <input type="text" id="petLocation" class="input-field" required>
-            </div>
-            <div class="mb-6">
-                <label class="block text-gray-700 mb-2">Image</label>
-                <input type="file" id="petImage" class="input-field" accept="image/*" required>
-            </div>
-            <button type="submit" class="btn-primary w-full">List Pet</button>
-        </form>
-        <div id="listingSuccess" class="hidden text-green-600 text-center mt-4">Pet listed successfully!</div>
-        <div id="listingError" class="hidden text-red-600 text-center mt-4"></div>
+<body class="bg-gray-50 min-h-screen flex flex-col">
+  <!-- Login Required Popup -->
+  <div id="loginRequiredPopup"
+    class="fixed inset-0 bg-black bg-opacity-40 z-50  flex items-center justify-center">
+    <div class="bg-white rounded-lg shadow-lg p-6 max-w-xs w-full mx-4 flex flex-col items-center">
+      <div class="w-12 h-12 flex items-center justify-center bg-primary/10 rounded-full mb-4">
+        <i class="ri-error-warning-line text-3xl text-primary"></i>
+      </div>
+      <h3 class="text-lg font-bold text-gray-900 mb-2">Login Required</h3>
+      <p class="text-gray-700 mb-4 text-center">You must be logged in to use this feature.</p>
+      <button id="closeLoginRequiredPopup"
+        class="bg-primary text-white px-4 py-2 rounded-button font-medium hover:bg-primary/90">Close</button>
     </div>
+  </div>
+
+  <!-- Navigation -->
+  <nav class="bg-white shadow-sm fixed w-full z-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between h-16">
+        <div class="flex items-center">
+          <a href="#" class="flex items-center">
+            <div class="w-10 h-10 flex items-center justify-center text-primary text-2xl">
+              <i class="ri-footprint-line"></i>
+            </div>
+            <span class="ml-2 text-2xl text-gray-800 logo">PawfectMatch</span>
+          </a>
+          <div class=" md:ml-10 md:flex md:space-x-8 items-center">
+            <a href="index.html" class="text-primary border-b-2 border-primary px-1 pt-1 font-medium">Home</a>
+            <a href="search.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
+              id="searchNavLink">Search Pets</a>
+            <a href="stories.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
+              id="storiesNavLink">Pawfect Stories</a>
+            <a href="#" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
+              id="aboutNavLink">About Us</a>
+            <a href="#" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
+              id="contactNavLink">Contact</a>
+          </div>
+        </div>
+        <div class="flex items-center">
+          <a href="login.html" id="loginNavBtn">
+            <button
+              class="bg-white text-primary border border-primary px-4 py-2 !rounded-button font-medium mr-3 whitespace-nowrap hover:bg-gray-50">Log
+              In</button>
+          </a>
+          <a href="register.html" id="registerNavBtn">
+            <button
+              class="bg-primary text-white px-4 py-2 !rounded-button font-medium whitespace-nowrap hover:bg-primary/90">Register</button>
+          </a>
+          <span id="navUsername" class="ml-4 text-primary font-semibold "></span>
+          <button id="logoutBtn"
+            class="ml-3 bg-gray-200 text-gray-700 px-4 py-2 rounded-button font-medium hover:bg-gray-300 ">Logout</button>
+          <a href="listing.html">
+            <button
+              class="bg-primary text-white px-4 py-2 !rounded-button font-medium whitespace-nowrap hover:bg-primary/90 ml-3"
+              id="listPetNavBtn">List a Pet</button>
+          </a>
+          <div class="ml-4 flex items-center md:">
+            <button
+              class="inline-flex items-center justify-center p-2 rounded-md text-gray-700 hover:text-primary hover:bg-gray-100 focus:outline-none">
+              <div class="w-6 h-6 flex items-center justify-center">
+                <i class="ri-menu-line"></i>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="flex-grow flex justify-center items-center mt-24">
+    <div id="listingContainer" class="max-w-2xl w-full bg-white p-8 rounded-2xl shadow-lg">
+      <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">List a Pet for Adoption</h2>
+      <form id="petListingForm" class="flex flex-wrap gap-4">
+        <div class="w-full md:w-[48%]">
+          <label for="petName" class="block text-gray-700 mb-1 font-medium">Pet Name</label>
+          <input type="text" id="petName"
+            class="input-field border border-gray-300 text-black placeholder-gray-400 focus:border-primary focus:ring-primary rounded-md px-3 py-2 w-full"
+            placeholder="Enter pet name" required>
+        </div>
+        <div class="w-full md:w-[48%]">
+          <label for="petType" class="block text-gray-700 mb-1 font-medium">Type</label>
+          <select id="petType"
+            class="input-field w-full border border-gray-300 text-black px-3 py-2 rounded-md" required>
+            <option value="dog">Dog</option>
+            <option value="cat">Cat</option>
+            <option value="bird">Bird</option>
+            <option value="small">Small & Furry</option>
+          </select>
+        </div>
+        <div class="w-full md:w-[48%]">
+          <label for="petAge" class="block text-gray-700 mb-1 font-medium">Age</label>
+          <input type="text" id="petAge"
+            class="input-field w-full border border-gray-300 text-black px-3 py-2 rounded-md" required>
+        </div>
+        <div class="w-full md:w-[48%]">
+          <label for="petGender" class="block text-gray-700 mb-1 font-medium">Gender</label>
+          <select id="petGender"
+            class="input-field w-full border border-gray-300 text-black px-3 py-2 rounded-md" required>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+        </div>
+        <div class="w-full">
+          <label for="petDescription" class="block text-gray-700 mb-1 font-medium">Description</label>
+          <textarea id="petDescription"
+            class="input-field w-full border border-gray-300 text-black px-3 py-2 rounded-md" rows="3"></textarea>
+        </div>
+        <div class="w-full md:w-[48%]">
+          <label for="petLocation" class="block text-gray-700 mb-1 font-medium">Location</label>
+          <input type="text" id="petLocation"
+            class="input-field w-full border border-gray-300 text-black px-3 py-2 rounded-md" required>
+        </div>
+        <div class="w-full md:w-[48%]">
+          <label for="petImage" class="block text-gray-700 mb-1 font-medium">Image</label>
+          <input type="file" id="petImage"
+            class="input-field w-full border border-gray-300 text-black px-3 py-2 rounded-md" accept="image/*"
+            required>
+        </div>
+        <button type="submit" class="btn-primary w-full mt-4">Submit</button>
+      </form>
+      <div id="listingSuccess" class=" text-green-600 text-center mt-4 font-medium">Pet listed successfully!</div>
+      <div id="listingError" class=" text-red-600 text-center mt-4 font-medium"></div>
+    </div>
+  </main>
+</body>
     <script>
     // Auth-based UI logic for listing page
     document.addEventListener('DOMContentLoaded', function () {
@@ -102,8 +185,8 @@
                 body: formData
             });
             if (res.ok) {
-                document.getElementById('listingSuccess').classList.remove('hidden');
-                document.getElementById('listingError').classList.add('hidden');
+                document.getElementById('listingSuccess').classList.remove('');
+                document.getElementById('listingError').classList.add('');
                 document.getElementById('petListingForm').reset();
                 setTimeout(() => {
                     window.location.reload();
@@ -111,13 +194,13 @@
             } else {
                 const data = await res.json();
                 document.getElementById('listingError').textContent = data.error || 'Failed to list pet.';
-                document.getElementById('listingError').classList.remove('hidden');
-                document.getElementById('listingSuccess').classList.add('hidden');
+                document.getElementById('listingError').classList.remove('');
+                document.getElementById('listingSuccess').classList.add('');
             }
         } catch (err) {
             document.getElementById('listingError').textContent = 'Server error. Please try again.';
-            document.getElementById('listingError').classList.remove('hidden');
-            document.getElementById('listingSuccess').classList.add('hidden');
+            document.getElementById('listingError').classList.remove('');
+            document.getElementById('listingSuccess').classList.add('');
         }
     });
     </script>
