--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <!-- Centered navigation links -->
             <div class="flex-1 flex justify-center items-center">
                 <div class="hidden md:flex md:space-x-8 items-center">
-                    <a href="#" class="text-primary border-b-0 border-primary px-1 pt-1 font-medium">Home</a>
+                    <a href="#" class="hover:text-primary  border-primary px-1 pt-1 font-medium">Home</a>
                     <a href="search.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-semibold"
                         id="searchNavLink">Search Pets</a>
                     <a href="stories.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-semibold text-center"
