--- a/public/listing.html
+++ b/public/listing.html
@@ -49,7 +49,7 @@
             <span class="ml-2 text-2xl text-gray-800 logo">PawfectMatch</span>
           </a>
           <div class=" md:ml-10 md:flex md:space-x-8 items-center">
-            <a href="index.html" class="text-primary border-b-2 border-primary px-1 pt-1 font-medium">Home</a>
+            <a href="index.html" class="hover:text-primary  border-primary px-1 pt-1 font-medium">Home</a>
             <a href="search.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
               id="searchNavLink">Search Pets</a>
             <a href="stories.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
