new file  update

--- a/public/index.html
+++ b/public/index.html
@@ -41,14 +41,14 @@
             <!-- Centered navigation links -->
             <div class="flex-1 flex justify-center items-center">
                 <div class="hidden md:flex md:space-x-8 items-center">
-                    <a href="#" class="hover:text-primary  border-primary px-1 pt-1 font-medium">Home</a>
-                    <a href="search.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-semibold"
+                    <a href="index.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium">Home</a>
+                    <a href="search.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
                         id="searchNavLink">Search Pets</a>
-                    <a href="stories.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-semibold text-center"
+                    <a href="stories.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium text-center"
                         id="storiesNavLink">Pawfect Stories</a>
-                    <a href="#" class="text-gray-700 hover:text-primary pt-1 font-semibold"
+                    <a href="Aboutus.html" class="text-gray-700 hover:text-primary pt-1 font-medium"
                         id="aboutNavLink">About Us</a>
-                    <a href="#" class="text-gray-700 hover:text-primary px-1 pt-1 font-small"
+                    <a href="#" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
                         id="contactNavLink">Contact</a>
                 </div>
             </div>
