--- a/public/pet-profile.html
+++ b/public/pet-profile.html
@@ -28,12 +28,12 @@
             <span class="ml-2 text-2xl text-gray-800 logo">PawfectMatch</span>
           </a>
           <div class=" md:ml-10 md:flex md:space-x-8 items-center">
-            <a href="index.html" class="text-primary  border-primary px-1 pt-1 font-medium">Home</a>
+            <a href="index.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium">Home</a>
             <a href="search.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
               id="searchNavLink">Search Pets</a>
             <a href="stories.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
               id="storiesNavLink">Pawfect Stories</a>
-            <a href="#" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
+            <a href="Aboutus.html" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
               id="aboutNavLink">About Us</a>
             <a href="#" class="text-gray-700 hover:text-primary px-1 pt-1 font-medium"
               id="contactNavLink">Contact</a>
@@ -124,16 +124,15 @@
     <textarea rows="1" class="w-full p-2 pb-2 rounded-md bg-gray-100 text-gray-700" readonly>${pet.description || 'No description.'}</textarea>
   </div>
 
-  <button  src="chart.html"
-    class="flex items-center justify-center gap-2 w-full py-2 px-4 text-white bg-blue-600 hover:bg-blue-700 rounded-lg mt-4 transition"
-    id="chatOwnerBtn" 
-    data-owner="${pet.owner && pet.owner._id ? pet.owner._id : ''}"
-    data-ownername="${pet.owner && pet.owner.username ? pet.owner.username : ''}"
-  >
-    <i class="ri-chat-3-line"></i>
-    Chat with Owner
-  </button>
-  
+<a
+  href="chat.html?user=${pet.owner && pet.owner._id ? pet.owner._id : ''}&username=${pet.owner && pet.owner.username ? encodeURIComponent(pet.owner.username) : ''}"
+  class="flex items-center justify-center gap-2 w-full py-2 px-4 text-white bg-blue-600 hover:bg-blue-700 rounded-lg mt-4 transition"
+  id="chatOwnerBtn"
+>
+  <i class="ri-chat-3-line"></i>
+  Chat with Owner
+</a>
+
 </form>
 </div>
 
